<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cavi</string>
    <string name="action_settings">Settings</string>
    <string name="temp">Temp °C</string>
    <string name="ColA">temp ambiente</string>
    <string name="ColB">Diametro filo</string>
    <string name="ColC">Lunghezza</string>
    <string name="ColD">Resistenza</string>
    <string name="ColE">diametro filo</string>
    <string name="ColF">Po rame</string>
    <string name="ColG">Lunghezza</string>
    <string name="ColH">Sezione Filo</string>
    <string name="ColI">temp ambiente</string>
    <string name="ColJ">diametro filo</string>
    <string name="ColK">Lunghezza</string>
    <string name="ColL">Resistenza</string>
    <string name="ColM">temp ambiente</string>
    <string name="ColN">diametro filo</string>
    <string name="ColO">Lunghezza</string>    
    <string name="Calcolare">Calc</string>
    <string name="Limpiar">Reset</string>
    <string name="hello_world">Hello world!</string> 

</resources>
